fix: individual elements issues fixed

--- a/002_css_assignment/components/examples/tabs.html
+++ b/002_css_assignment/components/examples/tabs.html
@@ -15,7 +15,7 @@
     <main class="flex__column">
 
         <!-- Simple text tab -->
-        <div class="container container__bg">
+        <div class="container container__bg center__container">
 
             <div class="tabs__container flex__row--center">
                 <div class="tab__container tab__container--active">
@@ -33,7 +33,7 @@
 
 
         <!-- Leading Icons tab -->
-        <div class="container container__bg">
+        <div class="container container__bg center__container">
 
             <div class="tabs__container flex__row--center">
                 <div class="tab__container tab__container--active">
@@ -53,7 +53,7 @@
         </div>
 
         <!-- Top Icons tab -->
-        <div class="container container__bg">
+        <div class="container container__bg center__container">
 
             <div class="tabs__container flex__row--center">
                 <div class="tab__container tab__container--column tab__container--active">
