--- a/002_css_assignment/components/examples/fixed_header.html
+++ b/002_css_assignment/components/examples/fixed_header.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../style.css">
-    <title>Headers</title>
+    <title>Fixed Header</title>
 </head>
 
 <body>
@@ -30,7 +30,7 @@
                     </button>
                 </div>
             </header>
-            <div class="content">
+            <div class="content__section">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi maiores architecto necessitatibus
                     hic quos molestiae neque consequatur distinctio atque deleniti. Similique recusandae nisi corporis,
                     pariatur soluta neque ipsa molestiae dolorum voluptas assumenda quos, numquam officiis ea obcaecati?
