--- a/002_css_assignment/components/examples/headers.html
+++ b/002_css_assignment/components/examples/headers.html
@@ -13,7 +13,7 @@
 <body>
 
     <main>
-        <section class="container">
+        <section class="container container__bg">
 
             <iframe src="standard_header.html" width="100%" height="100%" frameborder="0"></iframe>
 
