--- a/002_css_assignment/components/styles/header.css
+++ b/002_css_assignment/components/styles/header.css
@@ -1,15 +1,3 @@
-/* General */
-
-p{
-    text-align: justify;
-    padding: 0.5rem;
-}
-
-/* .container{
-    height: 15rem;
-    margin-bottom: 2rem;
-} */
-
 
 .header{
     background-color: var(--var-color-primary);
@@ -32,21 +20,18 @@ p{
 }
 
 .header__action{
-    background: none;
     color: white;
-    border: none;
     padding: 0.8rem;
     border-radius: 50%;
-    cursor: pointer;
     font-size: 1rem;
     margin: 0 0.5rem;
     font-weight: 700;
 }
 
 .header__action:hover{
-    background-color: var(--var-color-primary-shadow);
+    background-color: var(--var-color-primary-hover);
+    color: white;
 }
-
 
 /* header fixed */
 
