feat: tabs interactivity implemented

--- a/components/examples/tabs.html
+++ b/components/examples/tabs.html
@@ -18,13 +18,13 @@
         <div class="container container__bg center__container">
 
             <div class="tabs__container flex__row--center">
-                <div class="tab__container tab__container--active">
-                    <h3 class="tab__title tab__title--active">Tab one</h3>
+                <div id="text_tab" class="tab__container tab__container--active">
+                    <h3 class="tab__title">Tab one</h3>
                 </div>
-                <div class="tab__container">
+                <div id="text_tab" class="tab__container">
                     <h3 class="tab__title">Tab Two</h3>
                 </div>
-                <div class="tab__container">
+                <div id="text_tab" class="tab__container">
                     <h3 class="tab__title">Tab Three</h3>
                 </div>
             </div>
@@ -36,15 +36,15 @@
         <div class="container container__bg center__container">
 
             <div class="tabs__container flex__row--center">
-                <div class="tab__container tab__container--active">
-                    <i class="fas fa-clock tab__title--active"></i>
-                    <h3 class="tab__title tab__title--active">Tab one</h3>
+                <div id="leading_icon_tab" class="tab__container tab__container--active">
+                    <i class="fas fa-clock"></i>
+                    <h3 class="tab__title">Tab one</h3>
                 </div>
-                <div class="tab__container">
+                <div id="leading_icon_tab" class="tab__container">
                     <i class="fas fa-map tab__title"></i>
                     <h3 class="tab__title">Tab Two</h3>
                 </div>
-                <div class="tab__container">
+                <div id="leading_icon_tab" class="tab__container">
                     <i class="fas fa-heart tab__title"></i>
                     <h3 class="tab__title">Tab Three</h3>
                 </div>
@@ -56,15 +56,15 @@
         <div class="container container__bg center__container">
 
             <div class="tabs__container flex__row--center">
-                <div class="tab__container tab__container--column tab__container--active">
-                    <i class="fas fa-clock tab__title--active"></i>
-                    <h3 class="tab__title tab__title--active">Tab one</h3>
+                <div id="top_icon_tab" class="tab__container tab__container--column tab__container--active">
+                    <i class="fas fa-clock"></i>
+                    <h3 class="tab__title">Tab one</h3>
                 </div>
-                <div class="tab__container tab__container--column">
+                <div id="top_icon_tab" class="tab__container tab__container--column">
                     <i class="fas fa-map tab__title"></i>
                     <h3 class="tab__title">Tab Two</h3>
                 </div>
-                <div class="tab__container tab__container--column">
+                <div id="top_icon_tab" class="tab__container tab__container--column">
                     <i class="fas fa-heart tab__title"></i>
                     <h3 class="tab__title">Tab Three</h3>
                 </div>
@@ -73,6 +73,7 @@
         </div>
     </main>
 
+    <script src="../scripts/tabs.js"></script>
 
 </body>
 
